# Moblin-Hildon-Desktop

./: README.md
crown-beach-config/: 80-iusbc.rules  ChangeLog  disable_poll.fdi  hibernate  iusbc  iusbc.schemas  mount_helper  options  post-service  post-srv  power_save  powerbtn.sh.ume  session  shut-down  ume-hibernate  ume-shutdown  xorg.conf
galculator/: Makefile.in  configure  configure.in  galculator.spec  mkinstalldirs
grub/: install-sh
gstreamer-dbus-media-service/: ChangeLog  Makefile  gst-media-service  gst.conf  org.moblin.MobileMediaService.service
hildon-1/: autogen.sh
hildon-desktop/: ChangeLog  autogen.sh  configure.ac
hildon-desktop/data/: Makefile.am  applications.menu  desktop.conf.in  home-layout.conf  home.conf.in  marquee.conf.in  restore-menu.sh  statusbar-container.desktop.in
kernel-sample-driver/: Makefile  kernel-sample-driver.c  readme.odt
libva/: Makefile.in  configure
marquee-plugins/: AUTHORS  ChangeLog  README  autogen.sh  configure.ac
marquee-plugins/debian/: changelog  control  copyright  marquee-plugins.postinst  marquee-plugins1.dirs  marquee-plugins1.install  rules
marquee-plugins/po/: POTFILES  POTFILES.in
marquee-plugins/src/: Makefile.am  clock-plugin.c  clock-plugin.conf  clock-plugin.desktop.in  clock-plugin.h  close-app-plugin.c  close-app-plugin.h  close-app.desktop.in  common-config.c  common-config.h  drop-down-menu-plugin.c  drop-down-menu-plugin.h  drop-down-menu.desktop.in  dummy-panel-plugin.c  dummy-panel-plugin.h  dummy-panel.desktop.in  showhome-plugin.c  showhome-plugin.desktop.in  showhome-plugin.h
mce-dev-1.5.6/: Doxyfile  Makefile  mce.pc
mobile-basic-flash/: ChangeLog  Makefile.am  configure.ac  mobile-basic-flash.schemas
mobile-basic-flash/content/: Makefile.am  conf.xml  desktop_mgr.js  flash_home.html  flash_home.js  flash_home_1024x600.swf  flash_home_800x480.swf  flash_home_800x600.swf  grid_home.css  grid_home.html  grid_home.js  mobile.cfg  no_flash.css  no_flash_plugin.html
mobile-basic-flash/content/applications/: terminal.desktop
mobile-basic-flash/content/backgrounds/: bg_clouds.swf
mobile-basic-flash/debian/: changelog  control  copyright  rules
mobile-basic-flash/src/: Makefile.am  flash_home_1024x600.fla  flash_home_800x480.fla  flash_home_800x600.fla  gui.as  mobile-basic-home-plugin.c  mobile-basic-home-plugin.h  mobile-basic-home.desktop.in  windowhelper.c
mobile-browser/: .gitignore  Changelog  build_release.sh  client.mk  configure  configure.in  mozconfig.midbrowser
moblin-calc/: ChangeLog  Makefile.am  aclocal.m4  autogen.sh  calculator.desktop.in  configure.in  org.moblin.calculator.service.in
moblin-calc/debian/: changelog  control  copyright  docs  menu  rules
moblin-calc/doc/: Makefile.am
moblin-calc/src/: Makefile.am  calc_basic.h  callbacks.c  config_file.c  config_file.h  flex_parser.c  galculator.h  general_functions.c  general_functions.h  main.c  math_functions.c  math_functions.h  ui.c  ui.h
moblin-calc/ui/: Makefile.am  main_frame.glade  prefs.glade
moblin-chat/: autogen.sh  config.h.in  configure  configure.ac
moblin-chat/src/: Makefile.am  empathy.c  org.moblin.chat.service.in
moblin-clutter-home/: AUTHORS  ChangeLog  Makefile.am  README  configure.ac
moblin-clutter-home/data/: Makefile.am  desktop-launcher.schemas
moblin-clutter-home/debian/: changelog  control  copyright  rules
moblin-clutter-home/src/: Makefile.am  launcher-animation-linear.c  launcher-animation-linear.h  launcher-animation.c  launcher-animation.h  launcher-background.c  launcher-background.h  launcher-behave.c  launcher-behave.h  launcher-catmap.c  launcher-catmap.h  launcher-item.c  launcher-item.h  launcher-menu.c  launcher-menu.h  launcher-minimap-manager.c  launcher-minimap-manager.h  launcher-minimap.c  launcher-minimap.h  launcher-spinner.c  launcher-spinner.h  launcher-startup.c  launcher-startup.h  launcher-util.c  launcher-util.h  main.c
moblin-games/: ChangeLog  HACKING  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  config.h.in  configure  configure.in  gnome-games.spec
moblin-games/aisleriot/cards/bonded/70/: Makefile.am  Makefile.in
moblin-games/moblinsays/: Makefile.am  Makefile.in  customgtkrc  main.c  moblinsays.desktop.in  moblinsaysmobile.desktop  org.moblin.moblinsays.service.in
moblin-games/moblinsays/pixmaps/: Makefile.am  Makefile.in
moblin-keyboard-manager/: ChangeLog  Makefile  README  hildon-status-bar-keyboard.desktop  libkeyboard.c
moblin-media/: COPYING  ChangeLog  Makefile  moblin-media  moblin-media.schemas
moblin-media-browser-plugin/: ChangeLog  Makefile  README  defaults.list  mid-mozpluggerrc  moblin-media.desktop  moblinplayer-client  mozplugger-common.c  mozplugger-controller.c  mozplugger-helper.c  mozplugger.7  mozplugger.c  mozplugger.h  mozplugger.spec
moblin-notes/: Makefile.am  configure.in  notes.desktop.in
moblin-notes/debian/: changelog  control  copyright
moblin-notes/src/: Makefile.am  callback.c  dialog.c  dialog.h  main.c  menu.c  mousepad.h  search.c  selector.c  window.c
moko-finger-scroll/: AUTHORS  Doxyfile  Makefile.am  autogen.sh  configure.in  moko.kdevelop  moko.pc
moko-finger-scroll/debian/: README.Debian  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  moko-default.ex  moko-dev.install  moko.doc-base.EX  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  shlibs.local.ex  watch.ex
moko-finger-scroll/doc/: howto.doc
moko-finger-scroll/example/: Makefile.am  example.c  glade.c  moko.glade  tree_store.py
moko-finger-scroll/libpython/: Makefile.am
moko-finger-scroll/src/: Makefile.am  moko-finger-scroll.c  moko-finger-scroll.h  moko-type.h
mousepad/: aclocal.m4  autogen.sh  configure.in  notes.desktop.in  org.moblin.notes.service
network-manager/: Makefile.in  aclocal.m4  config.h.in  configure
network-manager-applet/: Makefile.in  aclocal.m4  config.h.in  configure
osso-af-settings/: osso-af-settings.pc.in
pm-utils/: Makefile.am  (+3 more)
(+3606 files in other folders)
