AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(moko, 0.1)

AC_LANG_C
AC_PROG_CC
AM_PROG_LIBTOOL

AM_PATH_PYTHON(2.3.5)

PKG_CHECK_MODULES(GTK, gtk+-2.0 >= 1.3.12)
GTK_VERSION=`$PKG_CONFIG --variable=gtk_binary_version gtk+-2.0`
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)
AC_SUBST(GTK_VERSION)

PKG_CHECK_MODULES(GDK, gdk-2.0 >= 1.3.12)
AC_SUBST(GDK_CFLAGS)
AC_SUBST(GDK_LIBS)

PKG_CHECK_MODULES(GNOME_PYTHON, gnome-python-2.0 >= 2.10.00)
AC_SUBST(PYGDK_CFLAGS)
AC_SUBST(PYGDK_LIBS)

PKG_CHECK_MODULES(PYGOB, pygobject-2.0 >= 2.11.0)
AC_SUBST(PYGOB_CFLAGS)
AC_SUBST(PYGOB_LIBS)

PKG_CHECK_MODULES(GLADE, libglade-2.0 >= 2.4.0)
AC_SUBST(GLADE_CFLAGS)
AC_SUBST(GLADE_LIBS)

AC_OUTPUT(Makefile src/Makefile libpython/Makefile example/Makefile)
