hildondesktopconf_DATA = \
	desktop.conf               \
	top-panel.conf             \
	bottom-panel.conf 	   \
	notification-groups.conf   \
	marquee.conf        

hildonnavigatordesktopentry_DATA = \
	app-switcher.desktop       \
        applications-menu.desktop  \
	switcher-menu.desktop

hildonmarqueedesktopentry_DATA = \
        applications-menu.desktop  \
        statusbar-container.desktop

#hildondesktopmenu_DATA = applications.menu

ossobackup_SCRIPTS = restore-menu.sh
ossobackupdir = $(sysconfdir)/xdg/osso-backup/restore.d/always

bin_SCRIPTS = install_sbapplet.sh

CLEANFILES = *~
