contentdir = $(datadir)/mobile-basic-flash
content_DATA = flash_home.html flash_home_800x480.swf flash_home_800x600.swf flash_home_1024x600.swf conf.xml desktop_mgr.js no_flash_plugin.html no_flash.css flash_home.js grid_home.html grid_home.js grid_home.css home.html

iconsdir = $(datadir)/icons/hicolor/128x128/apps
icons_DATA = icons/unknown.png icons/blank.png icons/xterm.png

applicationsdir = $(datadir)/applications
applications_DATA = applications/terminal.desktop

backgroundsdir = $(contentdir)/backgrounds
backgrounds_DATA = backgrounds/bg_blue_alt.jpg  backgrounds/bg_blue.jpg  backgrounds/bg_blue_light.jpg backgrounds/bg_blue_start.jpg backgrounds/bg_green.jpg  backgrounds/bg_grey.jpg  backgrounds/bg_palms.jpg  backgrounds/bg_red.jpg backgrounds/bg_clouds.swf

securitydir = /etc/adobe/FlashPlayerTrust
security_DATA = mobile.cfg

