pixmapdir = $(pkgdatadir)/moblinsays/pixmaps
pixmap_DATA = red-up.png  \
		yellow-up.png \
		green-up.png \
		blue-up.png \
		red-down.png \
		yellow-down.png \
		green-down.png \
		blue-down.png 

icondir = /usr/share/mobile-basic-flash/icons
icon_DATA = moblinsays.png

EXTRA_DIST = $(pixmap_DATA)
	

