pixmapdir = $(datadir)/gnome-games-common/card-themes/bonded/70
pixmap_DATA = \
	back.png \
	black_joker.png \
	club-1.png \
	club-10.png \
	club-2.png \
	club-3.png \
	club-4.png \
	club-5.png \
	club-6.png \
	club-7.png \
	club-8.png \
	club-9.png \
	club-jack.png \
	club-king.png \
	club-queen.png \
	diamond-1.png \
	diamond-10.png \
	diamond-2.png \
	diamond-3.png \
	diamond-4.png \
	diamond-5.png \
	diamond-6.png \
	diamond-7.png \
	diamond-8.png \
	diamond-9.png \
	diamond-jack.png \
	diamond-king.png \
	diamond-queen.png \
	heart-1.png \
	heart-10.png \
	heart-2.png \
	heart-3.png \
	heart-4.png \
	heart-5.png \
	heart-6.png \
	heart-7.png \
	heart-8.png \
	heart-9.png \
	heart-jack.png \
	heart-king.png \
	heart-queen.png \
	spade-1.png \
	spade-10.png \
	spade-2.png \
	spade-3.png \
	spade-4.png \
	spade-5.png \
	spade-6.png \
	spade-7.png \
	spade-8.png \
	spade-9.png \
	spade-jack.png \
	spade-king.png \
	spade-queen.png \
	red_joker.png \
	slot.png
